--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@types/node": "^18.14.3",
     "rollup": "^3.18.0",
     "rollup-plugin-dts": "^5.2.0",
     "ts-node": "^10.9.1",
